# termind

./: README.md  pyproject.toml  setup.sh
marketing/: launch-posts.md
termind/: __init__.py  cli.py  db.py  helpdocs.py  indexer.py  inpaint.py  ledger.py  lifecycle.py  llm.py  repl.py  scan.py  store.py  toolchain.py  web.py
termind/ca/: __init__.py  bank.py  finstmt.py  gst.py  notice.py  scrutiny.py  tables.py
tests/: conftest.py  test_ca_bank.py  test_ca_sections.py  test_termind.py
